--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 "aviso":"BELLARA BLRX VIP",
 "massage":"INJECTOR EXPIRED UPDATE THE INJECTOR\n\nUPDATED INJECTOR AVAILABLE ON CHANNEL BELLARA BLRX\n\nTHANK YOU GUYS",
 "okay":"UPDATE NOW",
-"link2":"https://youtu.be/LrVkSylW-QI",
-"link":"https://youtu.be/1u-3hb5R2vE"
+"link2":"https://youtu.be/LrVhttps://youtu.be/LrVkSylW-QIkSylW-QI",
+"link":"https://youtu.be/N6hJPNcvjGo"
 }
 ]
